# quickcheck-manual

./: README.md  quickcheck-manual.cabal
src/Test/QuickCheck/: Manual.hs
test/: Spec.hs
