name:                quickcheck-manual
version:             0.1.0
synopsis:            A QuickCheck Manual
description:         See README.md.
homepage:            https://github.com/stackbuilders/quickcheck-manual
license:             BSD3
license-file:        LICENSE
author:              Juan Pedro Villa Isaza
maintainer:          jvilla@stackbuilders.com
category:            Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.QuickCheck.Manual
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck == 2.7.6
  default-language:    Haskell2010

test-suite quickcheck
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck == 2.7.6
                     , quickcheck-manual
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stackbuilders/quickcheck-manual
